FIxed issue with background of button on safari

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -10,7 +10,7 @@ body {
   background: #212121;
   color: #fafafa;
   overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   overflow-x: hidden;
   -webkit-tap-highlight-color: transparent;
@@ -39,7 +39,7 @@ body {
   }
   a {
     text-decoration: none;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
     font-size: 20px;
     display: inline-block;
@@ -175,7 +175,7 @@ section {
       right: 0;
       bottom: 0;
       position: fixed;
-      background: url("/images/lys-bw.jpg");
+      background: url('/images/lys-bw.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       opacity: 0;
@@ -308,7 +308,7 @@ section {
 
     #aboutWrapper {
       font-size: 25px;
-      font-family: "Montserrat", sans-serif;
+      font-family: 'Montserrat', sans-serif;
       width: 66.66%;
       margin: 64px auto;
       padding: 32px 64px;
@@ -316,7 +316,7 @@ section {
       line-height: 1.5em;
       &::before,
       &::after {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         $size: 200px;
@@ -431,7 +431,7 @@ section {
         color: #212121;
         border: none;
         font-weight: 400; //600;
-        font-family: "Montserrat", sans-serif;
+        font-family: 'Montserrat', sans-serif;
         &:focus,
         &:hover {
           box-shadow: 0 0 0 7px #000, 0 0 0 8px #fff;
@@ -444,7 +444,7 @@ section {
       }
 
       button {
-        font-family: "Montserrat", sans-serif;
+        font-family: 'Montserrat', sans-serif;
         text-transform: uppercase;
         font-size: 20px;
         display: inline-flex;
@@ -550,7 +550,7 @@ footer {
   min-height: 60px;
   position: relative;
   display: flex;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400; //600;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -570,7 +570,7 @@ a {
   text-decoration: none;
 }
 #viewFullPortfolio {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   font-size: 20px;
   display: inline-flex;
@@ -580,7 +580,7 @@ a {
   font-weight: 400; //600;
   color: #212121;
   border: none;
-  fill: currentColor;
+  background: #fafafa;
   cursor: pointer;
   text-decoration: none;
   outline: none;
